Added scheduler visual component and javascript functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">When3Meet?</a>
+            <a class="navbar-brand" href="index.html">ZoneLink</a>
             <div class="btn-toolbar gap-2 ">
                 <button class="btn btn-outline-light">Log In</button>
                 <button class="btn btn-primary">Sign Up</button>
@@ -22,7 +22,7 @@
     <section class="bg-dark text-light p-5 text-center">
         <div class="container mx-8 bg-dark text-white">
             <h2>Already have a group ID?</h1>
-            <div class="input-group p-3 w-50 mx-auto">
+            <div class="input-group p-3 w-25 mx-auto">
                 <input type="text" class="form-control" placeholder="Group ID">
             </div>
     </section>
