--- a/html/scheduler.html
+++ b/html/scheduler.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="../code/functions.js"></script>
     </head>
-    <body>
+    <body onload="loadCalender()">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">When3Meet?</a>
+            <a class="navbar-brand" href="../index.html">ZoneLink</a>
             <div class="btn-toolbar gap-2 ">
                 <button class="btn btn-outline-light">Log In</button>
                 <button class="btn btn-primary">Sign Up</button>
@@ -44,48 +45,18 @@
                                     <button class="btn btn-outline-light">Remove</button>
                                 </div>
                             </div>
+                            <h5>
+                                Your meeting ID is:
+                            </h5>
+                            <div class="input-group w-50 mx-auto center-text py-3">
+                                <input type="text" class="form-control" placeholder="haveyoubeenpracticingTanner.com">
+                            </div>
                         </div>
- 
                     </div>
                 </div>    
             </div>
                 <div class="col-md-8" style="overflow-y:scroll; height:600px;">
-                    <div class="overflow-y:scroll">
-                        <div class="row">
-                            <div class="col-1"></div>
-                            <div class="col">Sun</div>
-                            <div class="col">Mon</div>
-                            <div class="col">Tues</div>
-                            <div class="col">Wed</div>
-                            <div class="col">Thurs</div>
-                            <div class="col">Fri</div>
-                            <div class="col">Sat</div>
-                        </div>
-                        <div class="row">12am</div>
-                        <div class="row">12:30am</div>
-                        <div class="row">2:00</div>
-                        <div class="row">3:00</div>
-                        <div class="row">4:00</div>
-                        <div class="row">5:00</div>
-                        <div class="row">6:00</div>
-                        <div class="row">7:00</div>
-                        <div class="row">8:00</div>
-                        <div class="row">9:00</div>
-                        <div class="row">10:00</div>
-                        <div class="row">11:00</div>
-                        <div class="row">12:00</div>
-                        <div class="row">13:00</div>
-                        <div class="row">14:00</div>
-                        <div class="row">15:00</div>
-                        <div class="row">16:00</div>
-                        <div class="row">17:00</div>
-                        <div class="row">18:00</div>
-                        <div class="row">19:00</div>
-                        <div class="row">20:00</div>
-                        <div class="row">21:00</div>
-                        <div class="row">22:00</div>
-                        <div class="row">23:00</div>
-                        <div class="row">24:00</div>
+                    <div class="overflow-y:scroll" id="plannerLoc">
                     </div>
                 </div>
             </div>
