--- a/html/scheduler.html
+++ b/html/scheduler.html
@@ -22,27 +22,33 @@
     <section class="bg-white p-5">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <div class = "card bg-dark text-light">
                         <div class="card-body text-center">
                             <h5>
-                                Control Station.
+                                What times are you free?
                             </h5>
                             <div class="row">
-                            <div class="col">
-                                <div class="input-group py-3 ">
-                                    <input type="text" class="form-control" placeholder="Start Time">
-                                </div>
+                            <div class="col-3">
+                                <select class="form-select my-3" aria-label="Default select example" id="startTime">
+                                    <option selected>Start Time</option>
+                                </select>
                             </div>
-                            <div class="col">
-                                <div class="input-group py-3 ">
-                                    <input type="text" class="form-control" placeholder="End Time">
-                                </div>
+                            <div class="col-3">
+                                <select class="form-select my-3" aria-label="Default select example" id="endTime">
+                                    <option selected>End Time</option>
+                                </select>
                             </div>
-                            <div class="col">
+                            <div class="col-2">
+                                <select class="form-select my-3" aria-label="Default select example" id="selectDay">
+                                    <option selected>Select Day</option>
+                                </select>
+                            </div>
+                            <div class="col-4">
                                 <div class="btn-group p-3 p-2">
-                                    <button class="btn btn-outline-light">Add</button>
-                                    <button class="btn btn-outline-light">Remove</button>
+                                    <button class="btn btn-outline-light" id="addButton" onclick="drawFromRange('add')">Add</button>
+                                    <button class="btn btn-outline-light" id="removeButton" onclick="drawFromRange('remove')">Remove</button>
+                                    <button class="btn btn-outline-light" id="clearButton"  onclick="clearCalendar()">Clear</button>
                                 </div>
                             </div>
                             <h5>
@@ -55,9 +61,8 @@
                     </div>
                 </div>    
             </div>
-                <div class="col-md-8" style="overflow-y:scroll; height:600px;">
-                    <div class="overflow-y:scroll" id="plannerLoc">
-                    </div>
+                <div class="col-md-7" style="overflow-y:scroll; height:600px;" onmouseleave="mouseUp(event)">
+                    <div class="overflow-y:scroll" id="plannerLoc"></div>
                 </div>
             </div>
         </div>
