--- a/client/html/index.html
+++ b/client/html/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <script type="text/javascript" type="module" src="code/system.js"></script>
     </head>
     <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -23,7 +24,7 @@
             <h2>Already have a group ID?</h1>
             <div class="input-group p-3 w-25 mx-auto">
                 <input type="text" class="form-control" placeholder="Group ID" id="groupID">
-                <a href="html/scheduler.html" class="btn btn-outline-light">Join Group</a>
+                <a href="plan.html" class="btn btn-outline-light" id="planner" onclick="appendExistingQuery()">Join Group</a>
             </div>
         </div>
     </section>
@@ -38,7 +39,7 @@
                             <i class="bi bi-calendar3"></i>
                         </h4>
                         <div class="container p-3">
-                            <a href="html/scheduler.html" class="btn btn-outline-light">Let's Go!</a>
+                            <a href="plan.html" class="btn btn-outline-light" id="newPlanner" onclick="appendUniqueQuery()">Let's Go!</a>
                         </div>
                     </div>
                 </div>
