more directory changes, added clear database script, added post endpoint to receive group times

--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
                             <i class="bi bi-calendar3"></i>
                         </h4>
                         <div class="container p-3">
-                            <a href="plan.html" class="btn btn-outline-light" id="newPlanner" onclick="appendUniqueQuery()">Let's Go!</a>
+                            <a href="html/plan.html" class="btn btn-outline-light" id="newPlanner" onclick="appendUniqueQuery()">Let's Go!</a>
                         </div>
                     </div>
                 </div>
