--- a/client/html/plan.html
+++ b/client/html/plan.html
@@ -8,8 +8,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js" integrity="sha512-F+u8eWHrfY8Xw9BLzZ8rG/0wIvs0y+JyRJrXjp3VjtFPylAEEGwKbua5Ip/oiVhaTDaDs4eU2Xtsxjs/9ag2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script type="text/javascript" type="module" src="code/system.js"></script>
-        <script type="text/javascript" type="module" src="code/plan.js"></script>
+        <script type="text/javascript" type="module" src="../code/system.js"></script>
+        <script type="text/javascript" type="module" src="../code/plan.js"></script>
     </head>
     <body onload="loadCalender()">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -51,6 +51,7 @@
                                     <button class="btn btn-outline-light" id="addButton" onclick="drawFromRange('add')">Add</button>
                                     <button class="btn btn-outline-light" id="removeButton" onclick="drawFromRange('remove')">Remove</button>
                                     <button class="btn btn-outline-light" id="clearButton"  onclick="clearCalendar()">Clear</button>
+                                    <button class="btn btn-outline-light" id="submitButton"  onclick="submit()">Submit</button>
                                 </div>
                             </div>
                             <h5>
