--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
         <script type="text/javascript" type="module" src="code/system.js"></script>
     </head>
     <body>
@@ -21,7 +22,7 @@
     </nav>
     <section class="bg-dark text-light p-5 text-center">
         <div class="container mx-8 bg-dark text-white">
-            <h2>Already have a group ID?</h1>
+            <h2>Already have a group ID?</h2>
             <div class="input-group p-3 w-25 mx-auto">
                 <input type="text" class="form-control" placeholder="Group ID" id="groupID">
                 <a href="plan.html" class="btn btn-outline-light" id="planner" onclick="appendExistingQuery()">Join Group</a>
