Code clean up and a few bug fixes

--- a/client/html/plan.html
+++ b/client/html/plan.html
@@ -83,7 +83,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-1">
                     <div class="btn-group-vertical" id="userSelector">
-                        <button class="btn btn-primary" onclick="drawGroupMember('overlap')">Group Info</button>
+                        <button class="btn btn-outline-light" onclick="drawGroupMember('overlap')">Group Info</button>
                     </div>
                 </div>
                 <div class="col-md-7" style="overflow-y:scroll; height:600px;">
