--- a/client/index.html
+++ b/client/index.html
@@ -27,32 +27,24 @@
                 <input type="text" class="form-control" placeholder="Group ID" id="groupID">
                 <a href="plan.html" class="btn btn-outline-light" id="planner" onclick="appendExistingQuery()">Join Group</a>
             </div>
+            <div class="card bg-primary text-light w-25 mx-auto ">
+                <div class="card-body text-center"></div>
+                <h4>
+                    New schedule
+                    <i class="bi bi-calendar3"></i>
+                </h4>
+                <div class="container p-3">
+                    <a href="html/plan.html" class="btn btn-outline-light" id="newPlanner" onclick="appendUniqueQuery()">Let's Go!</a>
+                </div>
+            </div>
         </div>
     </section>
     <section class="p-5">
-        <div class="container w-50">
+        <div class="container w-25">
             <div class="row text-center">
                 <div class="col-md">
-                    <div class="card bg-dark text-light">
-                        <div class="card-body text-center"></div>
-                        <h4>
-                            Recurring schedule
-                            <i class="bi bi-calendar3"></i>
-                        </h4>
-                        <div class="container p-3">
-                            <a href="html/plan.html" class="btn btn-outline-light" id="newPlanner" onclick="appendUniqueQuery()">Let's Go!</a>
-                        </div>
-                    </div>
+
                 </div>
-                <div class="col-md">
-                    <div class="card bg-primary text-light">
-                        <div class="card-body text-center"></div>
-                        <h4>
-                            Specific Time
-                            <i class="bi bi-alarm"></i></h4>
-                        <div class="container p-3">
-                            <a href="#" class="btn btn-outline-light">This One!</a>
-                        </div>
                     </div>
                 </div>
             </div>
