--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ZoneLink</a>
+            <a class="navbar-brand" href="index.html">TimeAlign</a>
             <div class="btn-toolbar gap-2 ">
                 <!<button class="btn btn-outline-light">Log In</button>>
                 <!<button class="btn btn-primary">Sign Up</button>>
