--- a/client/index.html
+++ b/client/index.html
@@ -21,19 +21,19 @@
         </div>
     </nav>
     <section class="bg-dark text-light p-5 text-center">
-        <div class="container mx-8 bg-dark text-white">
+        <div class="container-fluid mx-8 bg-dark text-white">
             <h2>Already have a group ID?</h2>
             <div class="input-group p-3 w-25 mx-auto">
                 <input type="text" class="form-control" placeholder="Group ID" id="groupID">
-                <a href="plan.html" class="btn btn-outline-light" id="planner" onclick="appendExistingQuery()">Join Group</a>
+                <a href="html/plan.html" class="btn btn-outline-light" id="planner" onclick="appendExistingQuery()">Join Group</a>
             </div>
-            <div class="card bg-primary text-light w-25 mx-auto ">
+            <div class="card-md bg-primary text-light w-25 mx-auto ">
                 <div class="card-body text-center"></div>
                 <h4>
                     New schedule
                     <i class="bi bi-calendar3"></i>
                 </h4>
-                <div class="container p-3">
+                <div class="container-md p-3">
                     <a href="html/plan.html" class="btn btn-outline-light" id="newPlanner" onclick="appendUniqueQuery()">Let's Go!</a>
                 </div>
             </div>
